examples/test/testpolicy17977.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17977
  namespace: namespace265
spec:
  podSelector:
    matchLabels:
      key9: value0
      key17: value3
      key34: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value34
      podSelector:
        matchLabels:
          key44: value39
          key14: value18
